GNOME Bugzilla – Bug 754681
Plug a memory leak when checking installed schemas
Last modified: 2015-09-07 14:43:34 UTC
Also switched to using g_strv_contains() since that's now a thing in glib.
Created attachment 310822 [details] [review] keyboard: Plug a memory leak when checking installed schemas g_settings_schema_source_list_schemas() returns allocated string arrays that must be freed.
Created attachment 310823 [details] [review] daemon: Plug a memory leak when checking installed schemas g_settings_schema_source_list_schemas() returns allocated string arrays that must be freed.
Created attachment 310824 [details] [review] common: Plug a memory leak when checking installed schemas g_settings_schema_source_list_schemas() returns allocated string arrays that must be freed.
Review of attachment 310822 [details] [review]: Sure.
Review of attachment 310823 [details] [review]: Yes.
Review of attachment 310824 [details] [review]: Sure.
Attachment 310822 [details] pushed as 7eabee7 - keyboard: Plug a memory leak when checking installed schemas Attachment 310823 [details] pushed as 9982541 - daemon: Plug a memory leak when checking installed schemas Attachment 310824 [details] pushed as 0c5ef3d - common: Plug a memory leak when checking installed schemas