keyboard: Plug a memory leak when checking installed schemas

g_settings_schema_source_list_schemas() returns allocated string
arrays that must be freed.

https://bugzilla.gnome.org/show_bug.cgi?id=754681